[tool.poetry]
name = "DeityTD"
version = "1.0.0"
description = "DTD Game"
authors = ["Alrik Firl <afirlortwo@gmail.com>"]
build = "build.py"

[tool.poetry.dependencies]
python     = "^3.8"
numpy      = "*"
pyparsing  = "*"
attrs      = "*"
six        = "*"
fastapi    = "*"
uvicorn    = {extras = ["standard"], version = "^0.12.0"}

[tool.poetry.dev-dependencies]
pytest      = "^5.2"
ipython     = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
