cmake_minimum_required(VERSION 2.8)

ADD_DEFINITIONS(-DRTSHADER_SYSTEM_BUILD_CORE_SHADERS)
ADD_DEFINITIONS(-DRTSHADER_SYSTEM_BUILD_EXT_SHADERS)

#Ogre
find_package(OGRE REQUIRED)
message(STATUS "Found OGRE Libs: ${OGRE_LIBRARIES}")
INCLUDE_DIRECTORIES(${OGRE_INCLUDE_DIRS})
FIND_PACKAGE(OIS REQUIRED)
INCLUDE_DIRECTORIES(${OIS_INCLUDE_DIRS})
FIND_PACKAGE(CEGUI REQUIRED)
INCLUDE_DIRECTORIES(${CEGUI_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CEGUIOGRE_INCLUDE_DIRS})
set(CEGUIOGRE "/usr/local/lib/libCEGUIOgreRenderer-0.so")
set(OGREVIEW_LIBS ${OGRE_LIBRARIES} ${OGRE_Overlay_LIBRARIES} ${OIS_LIBRARIES} ${CEGUI_LIBRARIES} ${CEGUIOGRE})

MESSAGE(STATUS "OGREVIEW LIBS -- ${OGREVIEW_LIBS}")

include_directories(${OpenCV_INCLUDE_DIRS})
add_subdirectory(UI)
set(ViewSRCS GameBackground.cpp ViewUtil.cpp)
include_directories(FractalFlames) 
include_directories(
	${OIS_INCLUDE_DIRS}
	${OGRE_INCLUDE_DIRS}
	${OGRE_SAMPLES_INCLUDEPATH}
	${OGRE_Overlay_INCLUDE_DIRS}
	${CEGUI_INCLUDE_DIR})

include_directories("${CMAKE_CURRENT_SOURCE_DIR}/scripts")

add_library(TDView SHARED ${ViewSRCS})
target_link_libraries(TDView 
	TowersBackend
	TDViewUI
	TDTowerCombiner
	${YAML-CPP}
	${OpenCV_LIBS}
	${OGREVIEW_LIBS})
